--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>翻译设置</title>
+    <title>中英直译</title>
     <meta name="manifest.type" content="browser_action" />
   </head>
   <body>
